--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: minimal-mistakes-jekyll
 title: "Malek Hanounah"
 minimal_mistakes_skin: "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+search: true
