--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-theme: minimal-mistakes-jekyll
-title: "Malek Hanounah"
-minimal_mistakes_skin: "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-search: true
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+  
+  # theme: minimal-mistakes-jekyll
+  # minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+  # search: true
+  # title: "Malek Hanounah"
+  
