--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
   
-  # theme: minimal-mistakes-jekyll
-  # minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-  # search: true
-  # title: "Malek Hanounah"
-  
+title: "Malek Hanounah"
